added images page

--- a/www/app/menu/menu.html
+++ b/www/app/menu/menu.html
@@ -41,6 +41,9 @@
         <div class='field-group item item-divider'>
           Attributes
         </div>
+        <ion-item nav-clear menu-close href='#/app/images'>
+          Images
+        </ion-item>
         <ion-item nav-clear menu-close href='#/app/samples'>
           Samples
         </ion-item>
