--- a/www/index.html
+++ b/www/index.html
@@ -55,6 +55,7 @@
 
     <!-- ng controllers -->
     <script src="app/about/about.controller.js"></script>
+    <script src="app/attributes/images/images.controller.js"></script>
     <script src="app/attributes/samples/samples.controller.js"></script>
     <script src="app/maps/offline-maps/archive-tiles.controller.js"></script>
     <script src="app/maps/image-basemap/image-basemap.controller.js"></script>
@@ -128,6 +129,7 @@
 
     <!-- new ng directives -->
     <script src="app/about/about.directive.js"></script>
+    <script src="app/attributes/images/images.directive.js"></script>
     <script src="app/attributes/samples/samples.directive.js"></script>
     <script src="app/maps/image-basemaps/image-basemaps.directive.js"></script>
     <script src="app/maps/other-maps/other-maps.directive.js"></script>
