--- a/www/app/attributes/images/images.directive.html
+++ b/www/app/attributes/images/images.directive.html
@@ -1,9 +1,29 @@
 <div>
+  <div ng-hide='vm.images.length === 0'>
+    <label class="item item-input item-select">
+      <div class="input-label">
+        <i class='button-icon ion-funnel'></i>Filter by Type
+      </div>
+      <select ng-model='vm.selectedType' ng-change='vm.filterImagesType()'>
+        <option value='all'>All</option>
+        <option value='photo'>Photo</option>
+        <option value='sketch'>Sketch</option>
+        <option value='thin_section'>Thin Section</option>
+        <option value='geological_cs'>Geological Cross Section</option>
+        <option value='geophysical_cs'>Geophysical Cross Section</option>
+        <option value='strat_section'>Stratigraphic Section</option>
+        <option value='other_image_ty'>Other</option>
+      </select>
+    </label>
+  </div>
   <div class='padding' ng-show='vm.images.length === 0'>
     No Images found in any of the active Spots. Add a new Image from the Image tab within a Spot.
   </div>
+  <div class='padding' ng-show='vm.images.length !== 0 && vm.imagesToDisplay.length === 0'>
+    No images with the this type yet.
+  </div>
   <ul class='strabo-flex-container strabo-wrap' ng-show='vm.images.length > 0'>
-    <li class="strabo-images-flex-item" ng-repeat='image in vm.images | orderBy:"name" track by image.id'
+    <li class="strabo-images-flex-item" ng-repeat='image in vm.imagesToDisplay | orderBy:"name" track by image.id'
         ng-click='vm.goToImage(image)'>
       <a><img ng-src='{{ vm.getImageSrc(image.id) }}' width='200' height='200'></a>
       <div style='text-align: center;'>
