Allow only integers entered for integer fields, and whole numbers for compass readings.

--- a/www/app/form/auto-fields.template.html
+++ b/www/app/form/auto-fields.template.html
@@ -10,6 +10,7 @@
                    ng-class='{ "has-errors" : straboForm[field.name].$invalid, "no-errors" : straboForm[field.name].$valid }'>
           <ion-label>{{field.label}}</ion-label>
           <input type='number'
+                 ng-pattern='/^[-+]?\d+$/'
                  name='{{ field.name }}'
                  placeholder='{{ field.hint }}'
                  ng-model='vm.data[field.name]'
