--- a/www/app/spot/spot-tab/spot-tab.html
+++ b/www/app/spot/spot-tab/spot-tab.html
@@ -1,7 +1,5 @@
-<form name='straboForm' novalidate=''>
-  <ion-view>
-    <ion-content class='strabo-form'>
-      <strabo-spot-tab-directive></strabo-spot-tab-directive>
-    </ion-content>
-  </ion-view>
-</form>
+<ion-view>
+  <ion-content>
+    <strabo-spot-tab-directive></strabo-spot-tab-directive>
+  </ion-content>
+</ion-view>
