--- a/www/app/relationship/relationship.directive.html
+++ b/www/app/relationship/relationship.directive.html
@@ -41,96 +41,104 @@
   </div>
   <br>
 
-  <div ng-show='!vm.data.a.spots && !vm.data.a.features && !vm.data.a.tags' class='padding-left'>
-    No Spots, Features or Tags selected for this side of the relationship yet.
-  </div>
-  <div class='field-group item item-divider' ng-show='vm.data.a.spots'>
-    {{ vm.data.a.spots.length || 0 }}
-    <span ng-if='vm.data.a.spots.length > 1 || !vm.data.a.spots.length'>Spots</span>
-    <span ng-if='vm.data.a.spots.length === 1'>Spot</span>
-  </div>
-  <ion-list>
-    <ion-item class='item-text-wrap item-button-right'
-              ng-repeat='spotId in vm.data.a.spots'
-              ng-click='vm.goToSpot(spotId)'>
-      {{ vm.getSpotName(spotId) }}
-    </ion-item>
-  </ion-list>
-  <div class='field-group item item-divider' ng-show='vm.data.a.features'>
-    {{ vm.getNumTaggedFeatures(vm.data.a) }}
-    <span ng-if='vm.getNumTaggedFeatures(vm.data.a) > 1 || vm.getNumTaggedFeatures(vm.data.a) === 0'>Features</span>
-    <span ng-if='vm.getNumTaggedFeatures(vm.data.a) === 1'>Feature</span>
-  </div>
-  <ion-list>
-    <div ng-repeat='(spotId, featureList) in vm.data.a.features'>
-      <ion-item class='item-text-wrap item-button-right'
-                ng-repeat='featureId in featureList'
-                ng-click='vm.goToSpot(vm.keyToId(spotId))'>
-        {{ vm.getFeatureName(vm.keyToId(spotId), featureId) }}
-        <small>(in Spot: {{ vm.getSpotName(vm.keyToId(spotId)) }})</small>
-      </ion-item>
+  <div class='row responsive-sm'>
+    <div class="col col-40">
+      <div ng-show='!vm.data.a.spots && !vm.data.a.features && !vm.data.a.tags' class='padding-left'>
+        No Spots, Features or Tags selected for this side of the relationship yet.
+      </div>
+      <div class='field-group item item-divider' ng-show='vm.data.a.spots'>
+        {{ vm.data.a.spots.length || 0 }}
+        <span ng-if='vm.data.a.spots.length > 1 || !vm.data.a.spots.length'>Spots</span>
+        <span ng-if='vm.data.a.spots.length === 1'>Spot</span>
+      </div>
+      <ion-list>
+        <ion-item class='item-text-wrap'
+                  ng-repeat='spotId in vm.data.a.spots'
+                  ng-click='vm.goToSpot(spotId)'>
+          {{ vm.getSpotName(spotId) }}
+        </ion-item>
+      </ion-list>
+      <div class='field-group item item-divider' ng-show='vm.data.a.features'>
+        {{ vm.getNumTaggedFeatures(vm.data.a) }}
+        <span ng-if='vm.getNumTaggedFeatures(vm.data.a) > 1 || vm.getNumTaggedFeatures(vm.data.a) === 0'>Features</span>
+        <span ng-if='vm.getNumTaggedFeatures(vm.data.a) === 1'>Feature</span>
+      </div>
+      <ion-list>
+        <div ng-repeat='(spotId, featureList) in vm.data.a.features'>
+          <ion-item class='item-text-wrap'
+                    ng-repeat='featureId in featureList'
+                    ng-click='vm.goToSpot(vm.keyToId(spotId))'>
+            {{ vm.getFeatureName(vm.keyToId(spotId), featureId) }}
+            <small>(in Spot: {{ vm.getSpotName(vm.keyToId(spotId)) }})</small>
+          </ion-item>
+        </div>
+      </ion-list>
+      <div class='field-group item item-divider' ng-show='vm.data.a.tags'>
+        {{ vm.data.a.tags.length || 0 }}
+        <span ng-if='vm.data.a.tags.length > 1 || !vm.data.a.tags.length'>Tags</span>
+        <span ng-if='vm.data.a.tags.length === 1'>Tags</span>
+      </div>
+      <ion-list>
+        <ion-item class='item-text-wrap'
+                  ng-repeat='id in vm.data.a.tags'
+                  ng-click='vm.goToTag(id)'>
+          {{ vm.getTagName(id) }}
+        </ion-item>
+      </ion-list>
     </div>
-  </ion-list>
-  <div class='field-group item item-divider' ng-show='vm.data.a.tags'>
-    {{ vm.data.a.tags.length || 0 }}
-    <span ng-if='vm.data.a.tags.length > 1 || !vm.data.a.tags.length'>Tags</span>
-    <span ng-if='vm.data.a.tags.length === 1'>Tags</span>
-  </div>
-  <ion-list>
-    <ion-item class='item-text-wrap item-button-right'
-              ng-repeat='id in vm.data.a.tags'
-              ng-click='vm.goToTag(id)'>
-      {{ vm.getTagName(id) }}
-    </ion-item>
-  </ion-list>
 
-  <br>
-  <div class='relationship-types'>
-    <span ng-hide='vm.data.types'>No relationship type(s) selected</span>
-    <span ng-show='vm.data.types'>{{ vm.data.types.join(' and ') }}</span>
-  </div>
-  <br>
-
-  <div ng-show='!vm.data.b.spots && !vm.data.b.features && !vm.data.b.tags' class='padding-left'>
-    No Spots, Features or Tags selected for this side of the relationship yet.
-  </div>
-  <div class='field-group item item-divider' ng-show='vm.data.b.spots'>
-    {{ vm.data.b.spots.length || 0 }}
-    <span ng-if='vm.data.b.spots.length > 1 || !vm.data.b.spots.length'>Spots</span>
-    <span ng-if='vm.data.b.spots.length === 1'>Spot</span>
-  </div>
-  <ion-list>
-    <ion-item class='item-text-wrap item-button-right'
-              ng-repeat='spotId in vm.data.b.spots'
-              ng-click='vm.goToSpot(spotId)'>
-      {{ vm.getSpotName(spotId) }}
-    </ion-item>
-  </ion-list>
-  <div class='field-group item item-divider' ng-show='vm.data.b.features'>
-    {{ vm.getNumTaggedFeatures(vm.data.b) }}
-    <span ng-if='vm.getNumTaggedFeatures(vm.data.b) > 1 || vm.getNumTaggedFeatures(vm.data.b) === 0'>Features</span>
-    <span ng-if='vm.getNumTaggedFeatures(vm.data.b) === 1'>Feature</span>
-  </div>
-  <ion-list>
-    <div ng-repeat='(spotId, featureList) in vm.data.b.features'>
-      <ion-item class='item-text-wrap item-button-right'
-                ng-repeat='featureId in featureList'
-                ng-click='vm.goToSpot(vm.keyToId(spotId))'>
-        {{ vm.getFeatureName(vm.keyToId(spotId), featureId) }}
-        <small>(in Spot: {{ vm.getSpotName(vm.keyToId(spotId)) }})</small>
-      </ion-item>
+    <div class="col col-20">
+      <br>
+      <div class='relationship-types'>
+        <span ng-hide='vm.data.types'>No relationship type(s) selected</span>
+        <span ng-show='vm.data.types'>{{ vm.data.types.join(' and ') }}</span>
+      </div>
+      <br>
     </div>
-  </ion-list>
-  <div class='field-group item item-divider' ng-show='vm.data.b.tags'>
-    {{ vm.data.b.tags.length || 0 }}
-    <span ng-if='vm.data.b.tags.length > 1 || !vm.data.b.tags.length'>Tags</span>
-    <span ng-if='vm.data.b.tags.length === 1'>Tag</span>
+
+    <div class="col col-40">
+      <div ng-show='!vm.data.b.spots && !vm.data.b.features && !vm.data.b.tags' class='padding-left'>
+        No Spots, Features or Tags selected for this side of the relationship yet.
+      </div>
+      <div class='field-group item item-divider' ng-show='vm.data.b.spots'>
+        {{ vm.data.b.spots.length || 0 }}
+        <span ng-if='vm.data.b.spots.length > 1 || !vm.data.b.spots.length'>Spots</span>
+        <span ng-if='vm.data.b.spots.length === 1'>Spot</span>
+      </div>
+      <ion-list>
+        <ion-item class='item-text-wrap'
+                  ng-repeat='spotId in vm.data.b.spots'
+                  ng-click='vm.goToSpot(spotId)'>
+          {{ vm.getSpotName(spotId) }}
+        </ion-item>
+      </ion-list>
+      <div class='field-group item item-divider' ng-show='vm.data.b.features'>
+        {{ vm.getNumTaggedFeatures(vm.data.b) }}
+        <span ng-if='vm.getNumTaggedFeatures(vm.data.b) > 1 || vm.getNumTaggedFeatures(vm.data.b) === 0'>Features</span>
+        <span ng-if='vm.getNumTaggedFeatures(vm.data.b) === 1'>Feature</span>
+      </div>
+      <ion-list>
+        <div ng-repeat='(spotId, featureList) in vm.data.b.features'>
+          <ion-item class='item-text-wrap'
+                    ng-repeat='featureId in featureList'
+                    ng-click='vm.goToSpot(vm.keyToId(spotId))'>
+            {{ vm.getFeatureName(vm.keyToId(spotId), featureId) }}
+            <small>(in Spot: {{ vm.getSpotName(vm.keyToId(spotId)) }})</small>
+          </ion-item>
+        </div>
+      </ion-list>
+      <div class='field-group item item-divider' ng-show='vm.data.b.tags'>
+        {{ vm.data.b.tags.length || 0 }}
+        <span ng-if='vm.data.b.tags.length > 1 || !vm.data.b.tags.length'>Tags</span>
+        <span ng-if='vm.data.b.tags.length === 1'>Tag</span>
+      </div>
+      <ion-list>
+        <ion-item class='item-text-wrap'
+                  ng-repeat='id in vm.data.b.tags'
+                  ng-click='vm.goToTag(id)'>
+          {{ vm.getTagName(id) }}
+        </ion-item>
+      </ion-list>
+    </div>
   </div>
-  <ion-list>
-    <ion-item class='item-text-wrap item-button-right'
-              ng-repeat='id in vm.data.b.tags'
-              ng-click='vm.goToTag(id)'>
-      {{ vm.getTagName(id) }}
-    </ion-item>
-  </ion-list>
 </div>
