added shading for text area of drop-down boxes

--- a/www/app/attributes/images/images.directive.html
+++ b/www/app/attributes/images/images.directive.html
@@ -4,7 +4,7 @@
       <div class="input-label">
         <i class='button-icon ion-funnel'></i>Filter by Type
       </div>
-      <select ng-model='vm.selectedType' ng-change='vm.filterImagesType()'>
+      <select ng-model='vm.selectedType' ng-change='vm.filterImagesType()' class='drop-down-box'>
         <option value='all'>All</option>
         <option value='photo'>Photo</option>
         <option value='sketch'>Sketch</option>
