--- a/www/app/relationship/relationship.directive.html
+++ b/www/app/relationship/relationship.directive.html
@@ -13,7 +13,7 @@
       <div class="input-label">
         Relationship Confidence
       </div>
-      <select ng-model='vm.data.confidence'>
+      <select ng-model='vm.data.confidence' class='drop-down-box'>
         <option value='completely'>Completely Confident</option>
         <option value='very'>Very Confident</option>
         <option value='fairly'>Fairly Confident</option>
