--- a/www/app/spot/other-features/other-feature-modal.html
+++ b/www/app/spot/other-features/other-feature-modal.html
@@ -12,7 +12,7 @@
     </ion-input>
     <ion-input class='item item-input item-select item-text-wrap'>
       <ion-label>Feature Type</ion-label>
-      <select ng-model='vmChild.otherFeature.type'
+      <select ng-model='vmChild.otherFeature.type' class='drop-down-box'
               ng-options='type as type for type in vmChild.otherFeatureTypes'>
       </select>
     </ion-input>
