--- a/www/app/spot/spot-tab/spot-tab.directive.html
+++ b/www/app/spot/spot-tab/spot-tab.directive.html
@@ -98,7 +98,7 @@
       </ion-input>
       <ion-input class='item item-input item-select item-text-wrap'>
         <ion-label>Spot Radius Units</ion-label>
-        <select ng-model='vm.spot.properties.spot_radius_units'>
+        <select ng-model='vm.spot.properties.spot_radius_units' class='drop-down-box'>
           <option>kilometer</option>
           <option>meter</option>
           <option>milimeter</option>
