--- a/www/app/form/auto-fields.template.html
+++ b/www/app/form/auto-fields.template.html
@@ -82,6 +82,7 @@
           <ion-label>{{ field.label }}</ion-label>
           <span class='item-placeholder' ng-show='field.hint'><small>{{ field.hint }}</small><br></span>
           <select name='{{ field.name }}'
+                  class='drop-down-box'
                   ng-model='vm.data[field.name]'
                   ng-options='choice.name as choice.label for choice in vm.choices
                                 | filter: { "list name": field.type.split(" ")[1] }'
