--- a/www/app/attributes/images/images.html
+++ b/www/app/attributes/images/images.html
@@ -5,6 +5,9 @@
   <ion-nav-buttons side='left'>
     <button menu-toggle='left' class='button button-icon icon ion-navicon'></button>
   </ion-nav-buttons>
+  <ion-nav-buttons side='right'>
+    <button ng-click='vm.popover.show($event)' class='button button-icon icon ion-more rotate-90'></button>
+  </ion-nav-buttons>
   <ion-content class='has-header'>
     <strabo-images-directive></strabo-images-directive>
   </ion-content>
