--- a/www/app/attributes/images/images.web.html
+++ b/www/app/attributes/images/images.web.html
@@ -1,2 +1,7 @@
-<div class='padding strabo-subheader-text'>Images</div>
+<div class="strabo-subheader">
+  <div class="subheader-right">
+    <button ng-click='vm.popover.show($event)' class='button button-icon icon ion-more rotate-90'></button>
+  </div>
+  <div class="text-center strabo-subheader-text">Images</div>
+</div>
 <strabo-images-directive></strabo-images-directive>
