--- a/www/app/about/about.directive.html
+++ b/www/app/about/about.directive.html
@@ -1,8 +1,8 @@
 <div class='padding'>
-  Strabo Spot Mobile is a part of a larger Data System for Structural Geology and Tectonics (SG&T).
-  It consists of a database, a web site and a mobile app.
-  The entire Strabo Spot project is still in development and as such the mobile app is not yet in the Google Play
-  Store or the iOS App Store but can be tested by accessing it as described below.
+  This StraboSpot app is a part of a larger Data System for Structural Geology and Tectonics (SG&T).
+  It consists of a database, a website and a mobile app.
+  The entire Strabo Spot project is still in development and as such the mobile app is only available for approved beta
+  testers from the Google Play Store and through TestFlight for iOS.
   <br><br>
   Current Version 0.18.9
   <br><br>
@@ -22,7 +22,7 @@
     <div class='padding-left' ng-show='vm.hasUpdate'>*After update downloads, app will restart. Please wait. Updating does not working correctly on iOS yet.*</div>
     <br>
   </div>-->
-  <h5>Accessing the Main Site</h5>
+  <h5>Accessing the StraboSpot Website</h5>
   <hr>
   <a href='#' onclick='window.open("http://strabospot.org/", "_system", "location=yes"); return false;'>http://strabospot.org/</a>
   <br><br>
@@ -30,17 +30,6 @@
   <hr>
   <a href='#'
      onclick='window.open("http://strabospot.org/download", "_system", "location=yes"); return false;'>http://strabospot.org/download</a>
-  <br><br>
-  **Note for iOS users:**<br>
-  The link above will not work for iOS devices unless your device has been previously registered as a valid
-  testing device for this particular project.
-  The app can be installed on iOS devices through the use of the Ionic View app. Search the App Store for <b>Ionic
-  View</b>. Preview a Shared App and use the id <b>fbd0e989</b>.
-  Some functionality is limited when using the app through Ionic View however, such as the camera/photos.
-  <br><br>
-  A web version of the app can be accessed at <a href='#'
-                                                 onclick='window.open("https://app.strabospot.org/", "_system", "location=yes"); return false;'>https://app.strabospot.org/</a>.
-  Again, as above, functionality is limited when using the app this way.
   <br><br>
   <h5>Bugs, Feature Requests and Other Issues</h5>
   <hr>
