--- a/www/app/spot/spot-tab/spot-tab.directive.html
+++ b/www/app/spot/spot-tab/spot-tab.directive.html
@@ -96,14 +96,14 @@
         <ion-label>Radius of Spot</ion-label>
         <input type='number' ng-model='vm.spot.properties.spot_radius'>
       </ion-input>
-      <ion-input class='item item-input item-select item-text-wrap'>
+      <ion-input class='item item-input item-select item-stacked-label item-text-wrap'>
         <ion-label>Spot Radius Units</ion-label>
-        <select ng-model='vm.spot.properties.spot_radius_units' class='drop-down-box'>
+        <select ng-model='vm.spot.properties.spot_radius_units'>
           <option>kilometer</option>
           <option>meter</option>
-          <option>milimeter</option>
+          <option>millimeter</option>
           <option>micrometer</option>
-          <option value=''></option>
+          <option value=''>-- Select Spot Radius Units --</option>
         </select>
       </ion-input>
     </div>
