--- a/www/app/project/manage/manage-project.directive.html
+++ b/www/app/project/manage/manage-project.directive.html
@@ -1,4 +1,4 @@
-<div class="divider-buttons-right">
+<div class='divider-buttons-right'>
   <!--<ion-refresher
     pulling-text="Pull to update..."
     on-refresh="vm.doSync()">
