--- a/www/indexWeb.html
+++ b/www/indexWeb.html
@@ -74,6 +74,7 @@
     <script src="app/about/about.controller.js"></script>
     <script src="app/attributes/images/images.controller.js"></script>
     <script src="app/attributes/samples/samples.controller.js"></script>
+    <script src="app/form/form.controller.js"></script>
     <script src="app/maps/offline-maps/archive-tiles.controller.js"></script>
     <script src="app/maps/image-basemap/image-basemap.controller.js"></script>
     <script src="app/maps/image-basemaps/image-basemaps.controller.js"></script>
